# ezrules

./: .coveragerc  .dockerignore  .env.example  .env.testing  .gitignore  .readthedocs.yaml  AGENTS.md  DOCUMENTATION_MAP.md  Dockerfile  Dockerfile.frontend  Dockerfile.manager  PARALLEL_PLAYWRIGHT_REBASE.md  Pipfile  README.md  alembic.ini  conf.py  conftest.py  docker-compose.demo.yml  docker-compose.prod.yml  docker-compose.yml  gunicorn.conf.py  index.rst  mkdocs.yml  pyproject.toml  requirements.txt  rule-config.yaml  settings.agent-stack.env.example  settings.env  test_cli.sh  whatsnew.rst
.claude/plans/: drifting-growing-toast.md
.github/scripts/: check-version-policy.sh  list-pr-changes.sh
.github/workflows/: business-journeys.yml  check-version.yml  frontend-unit.yml  playwright-e2e.yml  publish-containers.yml  publish-pypi.yml  ruff-lint.yml  tests.yml
alembic/: README  env.py  script.py.mako
alembic/versions/: 20260302_0001_initial_schema.py  20260303_0002_rule_lifecycle.py  20260303_0003_rule_history_actions.py  20260306_0004_runtime_settings.py  20260306_0005_rule_quality_reports.py  20260306_0006_runtime_settings_typed_values.py  20260306_0007_rule_quality_pairs_catalog.py  20260311_0008_outcome_resolution_hierarchy.py  20260316_0009_promote_rules_permission.py  20260316_0010_label_history_details.py  20260317_0011_user_org_fk.py  20260318_0012_runtime_settings_org_scope.py  20260318_0013_roles_labels_audit_org_scope.py  20260318_0014_tenant_integrity_hardening.py  20260322_0015_field_type_required_flags.py  20260322_0015_rule_rollouts.py  20260324_0016_rule_rollouts.py  20260324_0017_hot_path_indexes.py  20260324_0018_reporting_indexes.py  20260331_0019_backtesting_job_controls.py  20260403_0020_rule_evaluation_lane.py  20260407_0021_field_observation_metadata_cleanup.py  20260408_0022_rule_pause_status.py  20260409_0023_main_rule_execution_mode.py  20260420_0024_ai_rule_authoring_history.py  20260421_0024_strict_mode_history.py  20260428_0025_canonical_evaluation_ledgers.py  20260428_0026_canonical_event_labels.py  20260429_0027_remove_legacy_testing_logs.py  20260429_0028_submit_test_events_permission.py  20260430_0028_alert_notifications.py  20260506_0029_feature_definitions.py  20260522_0030_user_list_versions.py  20260604_0031_graph_features.py  20260625_0032_evaluation_rule_metadata_snapshots.py  20260625_0032_feature_snapshot_resolutions.py  20260630_0033_feature_snapshot_resolutions.py  20260705_0034_case_management_integrations.py  20260706_0035_case_resolution_workflow.py  20260707_0034_hash_refresh_sessions.py  (+9 more)
backend/: ezruleapp.py  ezrulevalapp.py  forms.py  utils.py
backend/rule_executors/: executors.py  lambda_rule_executor.py  utils.py
backend/static/: scripts.js  style.css
backend/templates/: create_rule.html  layout.html  outcomes.html  rules.html  show_rule.html  timeline.html  user_lists.html
core/: backtesting.py  helpers.py  outcomes.py  rule.py  rule_checkers.py  rule_engine.py  rule_helpers.py  rule_locker.py  rule_logic.py  rule_updater.py  user_lists.py
deployment/aws/: deploy_all.sh  deploy_stack.sh  dynamodb_stack.yaml  ezrule_app_stack.yaml  ezrules_app_stack.yaml  ezrules_bucket_stack.yaml  ezrules_dynamodb_stack.yaml  ezrules_lambda_stack.yaml  lambda_stack.yaml  package_lambda_executor.sh
deployment/k8s/: postgres.yaml  rule_manager.yaml
docs/: Pipfile  contributing.md  index.md  requirements.txt  troubleshooting.md  whatsnew.md  whatsnew.rst
docs/api-reference/: evaluator-api.md  manager-api.md
docs/architecture/: decisions.md  deployment.md  feature-math-contract.md  overview.md
docs/blog/: ai-rule-authoring.md  complex-entities-in-fraud-rules.md  field-type-management.md  graph-event-investigation.md  index.md  rule-lifecycle-management.md  rule-ordering-first-match.md  rule-quality-precision-recall.md  shadow-deployment.html  shadow-deployment.md  zero-to-live-rule-evaluation.md
docs/core/: rule.rst  rule_engine.rst  rule_updater.rst
docs/getting-started/: configuration.md  installation.md  integration-quickstart.md  quickstart.md
docs/snippets/: backend-test-command.md  openapi-links.md  start-api.md
docs/usage/: executor.rst  rule_logic.rst  ui.rst
docs/user-guide/: admin-guide.md  allowlist-rules.md  analyst-guide.md  creating-rules.md  field-types.md  labels-and-lists.md  managing-outcomes.md  monitoring.md  (+3 more)
ezrules/: cli.py  demo_data.py  settings.py
load-testing/: generate_input.py
models/: add_user.py  backend_core.py  database.py  init_db.py
scripts/: agent-stack-lib.sh  bombard_evaluator.py  build_and_push_manager.sh  run_postgres_locally.sh  spawn-detached.py  start-agent-stack.sh  stop-agent-stack.sh  verify-stack.sh
test-results/: .last-run.json
tests/: canonical_helpers.py  feature_math_oracle.py  test_ai_authoring_secret_storage.py  test_ai_rule_authoring.py  test_ai_rule_authoring_provider.py  test_alert_case_workflow.py  test_api_key_cache.py  test_api_v2_agent_tools.py  test_api_v2_ai_rule_authoring.py  test_api_v2_alerts.py  test_api_v2_allowlist_rules.py  test_api_v2_analytics.py  test_api_v2_api_keys.py  test_api_v2_audit.py  test_api_v2_auth.py  test_api_v2_auth_me_permissions.py  test_api_v2_contract_regressions.py  test_api_v2_cors.py  test_api_v2_evaluator.py  test_api_v2_evaluator_auth_dedup.py  test_api_v2_evaluator_first_match.py  test_api_v2_event_tests.py  test_api_v2_field_type_audit.py  test_api_v2_field_types.py  test_api_v2_label_assignment_history.py  test_api_v2_labels.py  test_api_v2_outcomes.py  test_api_v2_permissions.py  test_api_v2_phase1_org_scope.py  test_api_v2_phase2_org_scope.py  test_api_v2_phase3_org_scope.py  test_api_v2_roles.py  test_api_v2_rollouts.py  test_api_v2_rule_active_update_auto_promote.py  test_api_v2_rule_activity.py  test_api_v2_rule_outcomes_distribution.py  test_api_v2_rule_triggered_events.py  test_api_v2_rules.py  test_api_v2_runtime_settings_auto_promote.py  test_api_v2_runtime_settings_main_rule_execution.py  (+95 more)
(+370 files in other folders)
