[project]
name = "ezrules"
version = "0.14.0"
description = "Open-source transaction monitoring engine for business rules"
authors = [{name = "Konstantin Sofeikov", email = "sofeykov@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml",
    "ruamel.yaml",
    "sphinx",
    "pyparsing",
    "sqlalchemy",
    "psycopg2-binary",
    "email-validator",
    "sqlalchemy-utils",
    "click>=8.0.0",
    "pydantic-settings>=2.3.3",
    "pydantic>=2.7.4",
    "celery>=5.4.0",
    "pandas>=2.2.2",
    "redis>=6.4.0",
    # FastAPI stack
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "gunicorn",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",  # Required for form data (OAuth2 login)
]

[tool.uv]
dev-dependencies = [
    "pytest-cov",
    "pytest",
    "coverage",
    "ruff>=0.13.0",
    "ty>=0.0.1a20",
    "poethepoet>=0.37.0",
    "mkdocs-material>=9.6.21",
    "httpx>=0.27.0",  # Required for FastAPI TestClient
]

[project.scripts]
ezrules = "ezrules.cli:cli"

[tool.ruff]
line-length = 120
target-version = "py312"
output-format = "concise" # Works better for CI

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by line-length
    "B008", # function call in default argument - false positive for FastAPI Depends()
]

[tool.ruff.lint.isort]
known-first-party = ["ezrules"]

[tool.ty.src]
exclude = []

[tool.ty.terminal]
output-format = "concise"

[tool.ty.rules]
deprecated = "ignore"

[tool.poe.tasks]
check = [
    {cmd = "uv lock --locked"},
    {cmd = "ruff format --check ."},
    {cmd = "ty check ezrules"},
    {cmd = "ruff check ezrules"}
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
